--- a/task-2/task-two-react/src/App.css
+++ b/task-2/task-two-react/src/App.css
@@ -2,6 +2,11 @@ body {
   margin: 0;
   font-family: Arial, sans-serif;
   transition: background-color 0.3s, color 0.3s;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
 }
 
 .light-mode {
@@ -16,7 +21,11 @@ body {
 
 .container {
   text-align: center;
-  padding: 50px;
+
+}
+
+.text {
+  text-align: center;
 }
 
 button {
